Fix release permissions for GitHub Action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,9 +7,17 @@ on:
   release:
     types: [created]
 
+permissions:
+  contents: read
+  packages: read
+
 jobs:
   build:
     runs-on: ${{ matrix.os }}
+    permissions:
+      contents: write
+      attestations: write
+      id-token: write
 
     strategy:
       fail-fast: false
