--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,14 +29,13 @@ jobs:
             target: aarch64-unknown-linux-gnu
             artifact_suffix: linux-arm64.tar.gz
             strips: 1
+            install-target: gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
           - os: macos-latest
             target: x86_64-apple-darwin
             artifact_suffix: macos-x86_64.tar.gz
-            strips: 1
           - os: macos-latest
             target: aarch64-apple-darwin
             artifact_suffix: macos-arm64.tar.gz
-            strips: 1
           - os: windows-latest
             target: x86_64-pc-windows-gnu
             artifact_suffix: windows-x86_64.zip
@@ -50,17 +49,29 @@ jobs:
         with:
           target: ${{ matrix.target }}
 
+      - name: Install cross-compile tools
+        if: matrix.install-target != ''
+        run: sudo apt-get update && sudo apt-get install -y ${{ matrix.install-target }}
+
       - name: Build release
         run: |
           cargo build --release --target ${{ matrix.target }}
 
       - name: Create artifact
-        if: matrix.os != 'windows-latest'
+        if: matrix.os != 'windows-latest' && matrix.target != 'aarch64-apple-darwin' && matrix.target != 'x86_64-apple-darwin'
         run: |
           tar -czvf rmduprs-${{ matrix.target }}-${{ github.ref_name }}-${{ matrix.artifact_suffix }} \
             -C target/${{ matrix.target }}/release \
             --transform 's/^rmduprs/rmduprs/' \
             rmduprs
+
+      - name: Create artifact (macOS)
+        if: matrix.target == 'aarch64-apple-darwin' || matrix.target == 'x86_64-apple-darwin'
+        run: |
+          cd target/${{ matrix.target }}/release
+          mkdir -p rmduprs
+          cp rmduprs rmduprs/
+          tar -czvf ../../../../rmduprs-${{ matrix.target }}-${{ github.ref_name }}-${{ matrix.artifact_suffix }} rmduprs
 
       - name: Create artifact (Windows)
         if: matrix.os == 'windows-latest'
