--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,9 +21,6 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-musl
             artifact_suffix: linux-x86_64.tar.gz
-          - os: ubuntu-latest
-            target: aarch64-unknown-linux-musl
-            artifact_suffix: linux-arm64.tar.gz
           - os: macos-latest
             target: x86_64-apple-darwin
             artifact_suffix: macos-x86_64.tar.gz
@@ -55,7 +52,7 @@ jobs:
           fi
 
       - name: Create artifact
-        if: matrix.os != 'windows-latest'
+        if: matrix.target != 'x86_64-pc-windows-msvc'
         run: |
           mkdir -p rmduprs-dist
           cp target/${{ matrix.target }}/release/rmduprs rmduprs-dist/
@@ -77,5 +74,6 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: rmduprs-${{ matrix.target }}-${{ github.ref_name }}-${{ matrix.artifact_suffix }}
+          overwrite: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
