--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
             target: aarch64-apple-darwin
             artifact_suffix: macos-arm64.tar.gz
           - os: ubuntu-latest
-            target: x86_64-pc-windows-msvc
+            target: x86_64-pc-windows-gnu
             artifact_suffix: windows-x86_64.zip
 
     steps:
@@ -48,17 +48,12 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
-      - name: Install xwin (for Windows)
-        if: matrix.target == 'x86_64-pc-windows-msvc'
-        run: cargo install cargo-xwin && cargo xwin setup
+      - name: Install musl tools (Linux)
+        if: matrix.os == 'ubuntu-latest' && matrix.target == 'x86_64-unknown-linux-musl'
+        run: sudo apt-get update && sudo apt-get install -y musl-tools
 
       - name: Build release
-        run: |
-          if [ "${{ matrix.target }}" = "x86_64-pc-windows-msvc" ]; then
-            cargo xwin build --release --target ${{ matrix.target }}
-          else
-            cargo build --release --target ${{ matrix.target }}
-          fi
+        run: cargo build --release --target ${{ matrix.target }}
 
       - name: Create artifact
         if: matrix.target != 'x86_64-pc-windows-msvc'
