--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,7 +74,8 @@ jobs:
       - name: Create artifact (Windows)
         if: matrix.target == 'x86_64-pc-windows-msvc'
         run: |
-          7z a rmduprs-${{ matrix.target }}-${{ github.ref_name }}-${{ matrix.artifact_suffix }} target\${{ matrix.target }}\release\rmduprs.exe
+          cp target/${{ matrix.target }}/release/rmduprs.exe ./
+          7z a rmduprs-${{ matrix.target }}-${{ github.ref_name }}-${{ matrix.artifact_suffix }} rmduprs.exe
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
